<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.example.test_epic.ui.Feed.FeedFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_upload_image"
        android:name="com.example.test_epic.ui.UploadImage.UploadImageFragment"
        android:label="@string/title_upload_image"
        tools:layout="@layout/fragment_upload_image" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.test_epic.ui.Profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>